--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="icon_frais_hf">Icone pour les frais hors forfait</string>
     <string name="icon_recap_frais_hf">Icone pour le récapitulatif des frais hors forfait</string>
     <string name="icon_frais_km">Icone pour les frais kilométriques</string>
+    <string name="icon_synch">Icone pour la synchronisation</string>
     <string name="euro">€</string>
     <string name="ajouter">Ajouter</string>
     <string name="km">Km</string>
@@ -15,13 +16,17 @@
     <string name="plus">+</string>
     <string name="moins">-</string>
     <string name="valider">Valider</string>
+    <string name="synch">Synchroniser</string>
     <string name="deux_points">:</string>
     <string name="title_frais_km">Frais kilométriques</string>
     <string name="title_frais_repas">Frais de repas</string>
     <string name="title_frais_nuite">Frais de nuitées</string>
     <string name="title_frais_detape">Frais d étapes</string>
     <string name="title_frais_hf">Frais hors forfait</string>
+    <string name="title_synch">Synchroniser</string>
     <string name="motif">Motif :</string>
+    <string name="identifiant">Identifiant :</string>
+    <string name="motdepasse">Mot de Passe :</string>
     <string name="montant">Montant :</string>
     <string name="icone_frais_km">Icone des frais kilométriques</string>
     <string name="icone_frais_repas">Icone des frais de repas</string>
