--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -21,19 +21,22 @@
     <string name="plus">+</string>
     <string name="moins">-</string>
     <string name="valider">Valider</string>
-    <string name="synch">Synchroniser</string>
+    <string name="synch">Transférer mes données</string>
+    <string name="miseajour">Consulter</string>
     <string name="deux_points">:</string>
     <string name="title_frais_km">Frais kilométriques</string>
     <string name="title_frais_repas">Frais de repas</string>
     <string name="title_frais_nuite">Frais de nuitées</string>
     <string name="title_frais_detape">Frais d\'étapes</string>
     <string name="title_frais_hf">Frais hors forfait</string>
-    <string name="title_synch">Synchroniser</string>
+    <string name="title_synch">Transfert</string>
     <string name="title_historique">Frais enregistrés</string>
     <string name="title_miseajour">Consulter la base de données</string>
     <string name="motif">Motif :</string>
     <string name="identifiant">Identifiant</string>
+    <string name="identifiantmiseajour">Identifiant</string>
     <string name="motdepasse">Mot de Passe</string>
+    <string name="motdepassemiseajour">Mot de Passe</string>
     <string name="montant">Montant :</string>
     <string name="icone_frais_km">Icone des frais kilométriques</string>
     <string name="icone_frais_repas">Icone des frais de repas</string>
